# osqp-cpp

./: CMakeLists.txt  README.md
include/: osqp++.h
src/: osqp++.cc
test/: osqp++_test2.cpp
